--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
 	<!-- Creating styles for all buttons, words, and boxes -->
 	<style>
+	h1 {
+		color: white;
+	}
+
 	.button {
 	    background-color: #4CAF50;
 	    border: none;
@@ -49,8 +53,8 @@
     	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.54),0 17px 50px 0 rgba(0,0,0,0.19);
 			}
 	.boxes{
-		margin-left: 42%;
-		margin-right: 31%;
+		margin-left: 3%;
+		margin-right: 70%;
 	}
 	.return{
 		position: relative;
@@ -78,28 +82,31 @@
 	}
 
 	body {
-	 	background-image:url("TEAMJ.jpg");
-		background-position:50% 2%;
-		background-size: 1300px 895px;
-		background-repeat: no-repeat;
+	 	background:url("guirender.JPG") no-repeat center center fixed;
+		background-size: cover;
+		/*background-repeat: no-repeat;*/
 	 }
 /*Title*/
 	h1{
 		text-align:center;
 		position: relative;
 		left: -33px;
+		font-size: 50px;
 		}
 /*Signal Inputs*/
 	ul{
 		border-style: solid;
 		font-family: Impact;
-		background-color: lightgrey;
+		background-color: rgba(255,255,255,0.5);
 		text-align: center;
 		font-weight: bold;
 		position: relative;
 		top:-12px;
-		left: -102px;
-			
+		left: -1px;
+		font-size: 36px;
+		justify-content: center;
+		align-items: center;
+		padding: 0px;
 		}
 	button{
 		position: relative;
@@ -129,7 +136,32 @@
 		0% { transform: rotate(0deg); }
 		100% { transform: rotate(360deg); }
 	}
+
+	input[type=text] {
+		width: 20%;
+		padding: 5px 5px;
+		margin: 8px 0;
+		box-sizing: border-box;
+		font-size: 30px;
+		text-align: center;
+		-webkit-border-radius: 50px;
+		-moz-border-radius: 50px;
+		border-radius: 50px;
+		background-color: #b3b3b3;
+		color: green;
+		font-weight: bold;
+	}
+	.shutter_title {
+		display: block;
+		margin: auto;
+	}
+	.center {
+		margin: auto;
+		display: block;
+	}
 	 </style>
+
+
 
 <title>GUI</title>
 </head>
@@ -143,19 +175,22 @@
 		<div class="boxes">
 			<section style="color:Black;">
 				<ul>
-					Shutter Gear 1: <input type="text" id="Shutter1" name="shutter1" maxlength="1" onkeypress="return isNumberKey(event)">
+					<div class="shutter_title">Shutter Gear 1: </div>
+					<input type="text" id="Shutter1" name="shutter1" maxlength="1" onkeypress="return isNumberKey(event)">
 				</ul>
 			</section>
 
 			<section>
 				<ul>
-					Shutter Gear 2: <input type="text" id="Shutter2" name="shutter2" maxlength="1" onkeypress="return isNumberKey(event)">
+					<div class="shutter_title">Shutter Gear 2:</div>
+					<input type="text" id="Shutter2" name="shutter2" maxlength="1" onkeypress="return isNumberKey(event)">
 				</ul>
 			</section>
 
 			<section>
 				<ul>
-					Shutter Gear 3: <input type="text" id="Shutter3" name="shutter3" maxlength="1" onkeypress="return isNumberKey(event)">
+					<div class="shutter_title">Shutter Gear 3:</div>
+					<input type="text" id="Shutter3" name="shutter3" maxlength="1" onkeypress="return isNumberKey(event)">
 
 				</ul>
 			</section>
